bugfix style & alignment: the first section of about

--- a/src/components/aboutCartesi/initialPresentation/initialPresentation.module.scss
+++ b/src/components/aboutCartesi/initialPresentation/initialPresentation.module.scss
@@ -1,18 +1,24 @@
 .initial {
   background: linear-gradient(159.21deg, #030404 25.4%, #515251 86.86%);
   width: 100%;
-  min-height: 572px;
-
+  min-height: 588px;
+  transition: all 0.1s ease;
   .block-title {
     width: 100%;
-    padding-top: 135px;
+    max-height: 587px;
+    padding-top: 214px;
     position: relative;
     z-index: 1;
     padding-left: 245px;
+    transition: all 0.1s ease;
 
-    @media (max-width: 800px) {
+    @media (max-width: 900px) {
       left: auto;
-      padding: 135px 15%;
+      padding: 230px 15% 0;
+    }
+
+    @media (max-width: 462px) {
+      padding: 205px 10% 0;
     }
 
     .title {
@@ -23,6 +29,7 @@
       letter-spacing: -0.02em;
       color: #ffffff;
       margin-bottom: 30px;
+      transition: all 0.1s ease;
     }
 
     .description {
@@ -31,7 +38,12 @@
       font-size: 27px;
       line-height: 32px;
       color: #ffffff;
-      margin-bottom: 134px;
+      margin-bottom: 286px;
+      transition: all 0.1s ease;
+
+      @media (max-width: 462px) {
+        margin-bottom: 50px;
+      }
     }
   }
 
@@ -42,19 +54,26 @@
     mix-blend-mode: multiply;
     position: absolute;
     top: 0;
-    width: 100%;
-    min-height: 561px;
+    right: 0;
+    min-height: 588px;
+    transition: all 0.1s ease;
   }
 
   //    imagem vetorial em holograma
   .vector-bg {
     position: absolute;
     right: 0;
-    top: 233px;
+    top: 232px;
+    transition: all 0.1s ease;
+
+    @media (max-width: 805px) {
+      opacity: 0.4;
+      width: 1000px;
+    }
 
     @media (max-width: 462px) {
-      top: 266px;
-      opacity: 0.5;
+      top: 300px;
+      width: 800px;
     }
   }
 }
